# snake

./: .clang-format  .clang-tidy-ignore  .gitignore  CMakeLists.txt  Makefile  Readme.md  conanfile.py
.github/workflows/: ci-conan.yml
include/: ArgumentParser.h  Background.h  Game.h
scripts/: clang_format_wrapper.sh  clang_tidy_wrapper.sh  conan_profile_creator.sh
scripts/env/: ubuntu.sh
src/: ArgumentParser.cpp  Background.cpp  Game.cpp  main.cpp
